// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SinglePhoto renders correctly for projects with a statement 1`] = `
<div>
  <a
    href="/work/my-first-project/02"
  >
    <div
      class="group relative inline-block leading-[0px] cursor-pointer md:top-1/2 md:left-1/2 md:translate-x-[-50%] md:translate-y-[-50%]"
    >
      <div
        class="absolute inset-0 top-1/2 opacity-0 group-hover:opacity-100 text-center text-white z-20 after:content-[\\"\\"] after:absolute after:top-[-100%] after:bottom-0 after:left-0 after:right-0 after:bg-black/40 after:z-10"
      >
        My First Project
      </div>
      <img
        alt="My First Project"
        class="w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        sizes="(max-width: 767px) 768px, 1280px"
        src="/photos/my-first-project/1280w/01.jpg"
        srcset="/photos/my-first-project/768w/01.jpg 768w, /photos/my-first-project/1280w/01.jpg 1280w"
      />
    </div>
  </a>
</div>
`;

exports[`SinglePhoto renders correctly for projects without a statement 1`] = `
<div>
  <a
    href="/work/no-statement/02"
  >
    <div
      class="group relative inline-block leading-[0px] cursor-pointer md:top-1/2 md:left-1/2 md:translate-x-[-50%] md:translate-y-[-50%]"
    >
      <div
        class="absolute inset-0 top-1/2 opacity-0 group-hover:opacity-100 text-center text-white z-20 after:content-[\\"\\"] after:absolute after:top-[-100%] after:bottom-0 after:left-0 after:right-0 after:bg-black/40 after:z-10"
      >
        Project without a statement
      </div>
      <img
        alt="Project without a statement"
        class="w-auto h-auto md:max-w-[70vw] md:max-h-[90vh]"
        sizes="(max-width: 767px) 768px, 1280px"
        src="/photos/no-statement/1280w/01.jpg"
        srcset="/photos/no-statement/768w/01.jpg 768w, /photos/no-statement/1280w/01.jpg 1280w"
      />
    </div>
  </a>
</div>
`;
